--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -85,7 +85,7 @@
 </div>
 <footer class="page-footer font-small blue">
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="/"> WebTul.com</a>
+        <a href="/"> Produkht.com</a>
     </div>
 </footer>
 </body>
