--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -1,1 +1,52 @@
-<h1>Index</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Produkht</title>
+    <script data-ad-client="ca-pub-2325580012296666" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+</head>
+<body>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a href="/" class="navbar-brand">
+        Produkht
+    </a>
+    <div class="navbar-nav mr-auto">
+    </div>
+</nav>
+<div class="container mt-3">
+    <div class="list row">
+        <div class="col-md-12">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">https://</span>
+                </div>
+                <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Domain.com"
+                />
+                <div class="input-group-append">
+                    <button
+                            class="btn btn-outline-secondary"
+                            type="button"
+                    >
+                        Search
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer class="page-footer font-small blue">
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a href="/"> Produkht.com</a>
+    </div>
+</footer>
+</body>
+</html>
+
+
+
+
