--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -27,6 +27,8 @@
                 <span class="input-group-text">https://</span>
             </div>
             <input
+                    name="search"
+                    id="search"
                     type="text"
                     class="form-control"
                     placeholder="Domain.com"
@@ -35,6 +37,7 @@
                 <button
                         class="btn btn-outline-secondary"
                         type="button"
+                        onclick="javascript:document.location = '/' + document.getElementById('search').value"
                 >
                     Search
                 </button>
