--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -41,6 +41,12 @@
             </div>
         </div>
     </div>
+    <div class="list row">
+        <ul> <% data.forEach((data) => { %>
+                <li><a href="/<%= data.domain %>"><%= data.domain %></a></li>
+            <% })%>
+        </ul>
+    </div>
 </div>
 <footer class="page-footer font-small blue">
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
