--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Produkht</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script data-ad-client="ca-pub-2325580012296666" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
@@ -42,10 +43,18 @@
         </div>
     </div>
     <div class="list row">
-        <ul> <% data.forEach((data) => { %>
-                <li><a href="/<%= data.domain %>"><%= data.domain %></a></li>
-            <% })%>
-        </ul>
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    Latest added
+                </div>
+                <ul class="list-group"> <% data.forEach((data) => { %>
+                        <li class="list-group-item"><a href="/<%= data.domain %>"><%= data.domain %></a> <%= + data.meta.title %></li>
+                    <% })%>
+                </ul>
+            </div>
+
+        </div>
     </div>
 </div>
 <footer class="page-footer font-small blue">
