--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -2,6 +2,7 @@
 <html lang="en" translate="no">
 <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="<%= data.domain %> - <%= data.meta.description %>" />
     <title><%= data.domain %> - <%= data.meta.title %></title>
@@ -45,7 +46,7 @@
                 <button
                         class="btn btn-outline-secondary"
                         type="button"
-                        onclick="javascript:document.location = '/' + document.getElementById('search').value"
+                        onclick="document.location = '/' + document.getElementById('search').value"
                 >
                     Search
                 </button>
