--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <title>Produkht</title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -45,7 +46,7 @@
                     <button
                             class="btn btn-outline-secondary"
                             type="button"
-                            onclick="javascript:document.location = '/' + document.getElementById('search').value"
+                            onclick="document.location = '/' + document.getElementById('search').value"
                     >
                         Search
                     </button>
