--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -55,7 +55,7 @@
     </div>
     <div class="col-md-12">
         <div class="card">
-            <img class="card-img-top" src=<%= data.meta.image %> />
+            <img class="card-img-top" src="<%= data.meta.image %>" />
             <div class="card-body">
                 <h5 class="card-title"><%= data.meta.title %></h5>
                 <p class="card-text"><%= data.meta.description %></p>
