--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -29,6 +29,12 @@
     </div>
 </nav>
 <div class="container mt-3">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Produkht</h1>
+            <p class="lead">Collecting information about any products on internet.</p>
+        </div>
+    </div>
     <div class="list row">
         <div class="col-md-12">
             <div class="input-group mb-3">
@@ -61,7 +67,10 @@
                     Latest added
                 </div>
                 <ul class="list-group"> <% data.forEach((data) => { %>
-                        <li class="list-group-item"><a href="/<%= data.domain %>"><%= data.domain %></a> <%= data.meta.title %></li>
+                        <li class="list-group-item"><svg class="bi bi-chevron-compact-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
+                            </svg>
+                            <a href="/<%= data.domain %>"><%= data.domain %></a> <%= data.meta.title %></li>
                     <% })%>
                 </ul>
             </div>
