--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -29,10 +29,10 @@
     </div>
 </nav>
 <div class="container mt-3">
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron">
         <div class="container">
-            <h1 class="display-4">Produkht</h1>
-            <p class="lead">Collecting information about any products on internet.</p>
+            <h1 class="display-1">Produkht</h1>
+            <p class="lead">Produkht - check website technologies and get insights on how its made.</p>
         </div>
     </div>
     <div class="list row">
@@ -64,7 +64,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    Latest added
+                    Recently analyzed sites
                 </div>
                 <ul class="list-group"> <% data.forEach((data) => { %>
                         <li class="list-group-item">
