Change placeholder text.

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -46,7 +46,7 @@
                         id="search"
                         type="text"
                         class="form-control"
-                        placeholder="domain.com"
+                        placeholder="ex. domain.com"
                 />
                 <div class="input-group-append">
                     <button
