--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -40,7 +40,7 @@
                     id="search"
                     type="text"
                     class="form-control"
-                    placeholder="Domain.com"
+                    placeholder="ex. domain.com"
             />
             <div class="input-group-append">
                 <button
