--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-12">
+    <div class="col-md-6">
         <div class="card">
             <img class="card-img-top" src="<%= data.meta.image %>" />
             <div class="card-body">
@@ -61,6 +61,21 @@
                 <p class="card-text"><%= data.meta.description %></p>
                 <p class="card-text"><small class="text-muted"><%= data.domain %></small></p>
             </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="card">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Top -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2325580012296666"
+                 data-ad-slot="5737352428"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
     </div>
 </div>
