--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -53,8 +53,15 @@
             </div>
         </div>
     </div>
+
     <div class="col-md-6">
         <div class="card">
+            <div class="card-header">
+                <h3>
+                    <%= data.domain %>
+                    <small class="text-muted">info</small>
+                </h3>
+            </div>
             <img class="card-img-top" src="<%= data.meta.image %>" />
             <div class="card-body">
                 <h5 class="card-title"><%= data.meta.title %></h5>
