Improve search bar.

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -47,11 +47,11 @@
                         />
                         <div class="input-group-append">
                             <button
-                                    class="btn btn-outline-secondary"
+                                    class="btn btn-secondary"
                                     type="button"
                                     onclick="document.location = '/' + document.getElementById('search').value"
                             >
-                                Search
+                                Check
                             </button>
                         </div>
                     </div>
