--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -26,34 +26,31 @@
         Produkht
     </a>
     <div class="navbar-nav mr-auto">
+
+            <div class="input-group">
+                <input
+                        name="search"
+                        id="search"
+                        type="text"
+                        class="form-control"
+                        placeholder="ex. domain.com"
+                />
+                <div class="input-group-append">
+                    <button
+                            class="btn btn-secondary"
+                            type="submit"
+                            onclick="document.location = '/' + document.getElementById('search').value"
+                    >
+                        Check
+                    </button>
+                </div>
+            </div>
+
     </div>
+
 </nav>
 <div class="container mt-3">
 <div class="list row">
-    <div class="col-md-12">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text">https://</span>
-            </div>
-            <input
-                    name="search"
-                    id="search"
-                    type="text"
-                    class="form-control"
-                    placeholder="ex. domain.com"
-            />
-            <div class="input-group-append">
-                <button
-                        class="btn btn-outline-secondary"
-                        type="button"
-                        onclick="document.location = '/' + document.getElementById('search').value"
-                >
-                    Search
-                </button>
-            </div>
-        </div>
-    </div>
-
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
