--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -55,6 +55,7 @@
         <div class="card">
             <div class="card-header">
                 <h3>
+                    <img width="16" height="16" alt="<%= data.domain %> favicon" src="https://www.google.com/s2/favicons?domain=<%= data.domain %>">
                     <%= data.domain %>
                     <small class="text-muted">info</small>
                 </h3>
