--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -117,9 +117,7 @@
             </div>
             <div class="card-body">
                 <p class="lead">WHOIS (pronounced as the phrase "who is") is a query and response protocol that is widely used for querying databases that store the registered users or assignees of an Internet resource, such as a domain name, an IP address block or an autonomous system, but is also used for a wider range of other information. The protocol stores and delivers database content in a human-readable format.</p>
-                               <pre>
-                                 <%= data.whois %>
-                               </pre>
+                               <pre><%= data.whois %></pre>
             </div>
         </div>
     </div>
