--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="<%= data.domain %> - <%= data.meta.description %>" />
-    <title><%= data.domain %> - <%= data.meta.title %></title>
+    <title>💻 <%= data.domain %> - <%= data.meta.title %></title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script data-ad-client="ca-pub-2325580012296666" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
