--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -50,7 +50,7 @@
     </div>
 
 </nav>
-<div class="container>
+<div class="container">
 <div class="list row">
     <div class="col-md-6">
         <div class="card">
