--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="<%= data.domain %> - <%= data.meta && data.meta.description  %>" />
-    <title>💻 <%= data.domain %> - <%= data.meta && data.meta.title %></title>
+    <meta name="description" content="<%= data.domain %> info - <%= data.meta && data.meta.description  %>" />
+    <title>💻<%= data.domain %> <%= data.meta && data.meta.title %></title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script data-ad-client="ca-pub-2325580012296666" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -52,7 +52,7 @@
 </nav>
 <div class="container-fluid">
 <div class="list row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="card">
             <div class="card-header">
                 <h3>
@@ -67,21 +67,6 @@
                 <p class="card-text"><%= data.meta && data.meta.description %></p>
                 <p class="card-text"><small class="text-muted"><%= data.meta && data.domain %></small></p>
             </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Top -->
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-2325580012296666"
-                 data-ad-slot="5737352428"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
         </div>
     </div>
 </div>
