--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -22,11 +22,12 @@
     gtag('config', 'UA-169225408-1');
 </script>
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="/" class="navbar-brand">
-        Produkht
-    </a>
-    <div class="navbar-nav mr-auto">
+<div class="container">
+    <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-between sticky-top">
+        <a href="/" class="navbar-brand">
+            Produkht
+        </a>
+        <div class="navbar-nav mr-sm-2">
 
             <div class="input-group">
                 <input
@@ -47,18 +48,21 @@
                 </div>
             </div>
 
-    </div>
+        </div>
 
-</nav>
-<div class="container-fluid">
+    </nav>
 <div class="list row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
                 <h3>
-                    <img width="16" height="16" alt="<%= data.domain %> favicon" src="https://www.google.com/s2/favicons?domain=<%= data.domain %>">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                        <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
+                        <circle cx="8" cy="4.5" r="1"/>
+                    </svg>
                     <%= data.domain %>
-                    <small class="text-muted">info</small>
+                    <small class="text-muted">domain info</small>
                 </h3>
             </div>
             <img class="card-img-top" src="<%= data.meta && data.meta.image %>" />
