Change display of domain page.

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="/favicon.ico" />
-    <title>Produkht</title>
+    <title>Domain Checker - Produkht</title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script data-ad-client="ca-pub-2325580012296666" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -36,14 +36,13 @@
         <div class="jumbotron">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Website Analyzer</h1>
-                    <p>Check website technologies and get insights on how its made: DNS, Whois, Meta Tags.</p>
-                    <div class="input-group">
+                    <h1>Domain Checker</h1>
+                    <div class="input-group input-group-lg">
                         <input
                                 name="search"
                                 id="search"
                                 type="text"
-                                class="form-control"
+                                class="form-control input-lg"
                                 placeholder="ex. domain.com"
                         />
                         <div class="input-group-append">
