--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -63,7 +63,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    Recently analyzed sites
+                    Recently checked <domains>  </domains>
                 </div>
                 <ul class="list-group"> <% data.forEach((data) => { %>
                         <li class="list-group-item">
