--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -25,7 +25,7 @@
 <div class="container">
     <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-between sticky-top">
         <a href="/" class="navbar-brand">
-            Produkht
+            PRODUKHT
         </a>
         <div class="navbar-nav mr-sm-2">
 
@@ -74,6 +74,38 @@
         </div>
     </div>
 </div>
+    <div class="list row">
+        <div class="col-md-12">
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- Top -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-2325580012296666"
+                 data-ad-slot="5737352428"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+    </div>
+    <div class="list row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header text-white bg-info">
+                    <svg class="bi bi-exclamation-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
+                    </svg>
+                    Who is the owner of <%= data.domain %>
+                </div>
+                <div class="card-body">
+                    <p class="lead">WHOIS (pronounced as the phrase "who is") is a query and response protocol that is widely used for querying databases that store the registered users or assignees of an Internet resource, such as a domain name, an IP address block or an autonomous system, but is also used for a wider range of other information. The protocol stores and delivers database content in a human-readable format.</p>
+                    <pre><%= data.whois %></pre>
+                </div>
+            </div>
+        </div>
+    </div>
     <% if (data.meta) { %>
     <div class="list row">
     <div class="col-md-12">
@@ -97,28 +129,11 @@
     </div>
 </div>
         <% } %>
-<div class="list row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header text-white bg-dark">
-                <svg class="bi bi-exclamation-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
-                </svg>
-                Domain Whois
-            </div>
-            <div class="card-body">
-                <p class="lead">WHOIS (pronounced as the phrase "who is") is a query and response protocol that is widely used for querying databases that store the registered users or assignees of an Internet resource, such as a domain name, an IP address block or an autonomous system, but is also used for a wider range of other information. The protocol stores and delivers database content in a human-readable format.</p>
-                               <pre><%= data.whois %></pre>
-            </div>
-        </div>
-    </div>
-</div>
     <% if (data.meta) { %>
     <div class="list row">
         <div class="col-md-12">
             <div class="card">
-                <div class="card-header text-white bg-secondary">
+                <div class="card-header text-white bg-info">
                     <svg class="bi bi-exclamation-circle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                         <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
