--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content='width=1024' name='viewport'>
     <meta name="description" content="<%= data.domain %> info - <%= data.meta && data.meta.description  %>" />
     <title>💻<%= data.domain %> <%= data.meta && data.meta.title %></title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
