--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -22,7 +22,7 @@
 </script>
 
 <body>
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<nav class="navbar navbar-expand navbar-dark bg-dark-blue">
     <a href="/" class="navbar-brand">
         Produkht
     </a>
