--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -23,7 +23,7 @@
 </script>
 <body>
 <div class="container">
-    <nav class="navbar navbar-expand navbar-dark bg-dark justify-content-between sticky-top">
+    <nav class="navbar navbar-expand navbar-dark bg-dark-blue justify-content-between sticky-top">
         <a href="/" class="navbar-brand">
             PRODUKHT
         </a>
