--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -2,6 +2,7 @@
 <html lang="en" translate="no">
 <head>
     <meta charset="utf-8" />
+    <meta name="google" content="notranslate" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="<%= data.domain %> info - <%= data.meta && data.meta.description  %>" />
