--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -67,11 +67,17 @@
                 </h3>
             </div>
             <% if (data.meta) { %>
-            <img class="card-img-top" src="<%= data.meta && data.meta.image %>" />
-            <div class="card-body">
-                <h5 class="card-title"><%= data.meta && data.meta.title %></h5>
-                <p class="card-text"><%= data.meta && data.meta.description %></p>
-                <p class="card-text"><small class="text-muted"><%= data.meta && data.domain %></small></p>
+            <div class="row no-gutters">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= data.meta && data.meta.title %></h5>
+                        <p class="card-text"><%= data.meta && data.meta.description %></p>
+                        <p class="card-text"><small class="text-muted"><%= data.meta && data.domain %></small></p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="card-img-top" style="height: 250px" src="<%= data.meta && data.meta.image %>" />
+                </div>
             </div>
             <% } %>
         </div>
