--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="card-img-top" style="height: 250px" src="<%= data.meta && data.meta.image %>" />
+                    <img class="card-img-top" style="max-height: 250px" src="<%= data.meta && data.meta.image %>" />
                 </div>
             </div>
             <% } %>
