--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -2,6 +2,9 @@
 <html lang="en" translate="no">
 <head>
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#23384e">
+    <meta name="msapplication-navbutton-color" content="#23384e">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#23384e">
     <meta name="google" content="notranslate" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
