Modify viewport for mobile.

--- a/app/templates/index.ejs
+++ b/app/templates/index.ejs
@@ -6,7 +6,7 @@
     <meta name="msapplication-navbutton-color" content="#23384e">
     <meta name="apple-mobile-web-app-status-bar-style" content="#23384e">
     <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico" />
     <title>Domain Checker - Produkht</title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
