--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#23384e">
     <meta name="google" content="notranslate" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <meta name="description" content="<%= data.domain %> info - <%= data.meta && data.meta.description  %>" />
     <title><%= data.domain %> <%= data.meta && data.meta.title %></title>
     <meta name="google-site-verification" content="oZBfhfG3EVRtWIxK9Twxitf5dhx_O6VnD34p5p2aNgU" />
