Add link to site.

--- a/app/templates/page.ejs
+++ b/app/templates/page.ejs
@@ -67,6 +67,7 @@
                     </svg>
                     <%= data.domain %>
                     <small class="text-muted">domain info</small>
+                    <a href="http://<%= data.domain %>" class="btn btn-primary btn-lg active">Visit site</a>
                 </h3>
             </div>
             <% if (data.meta) { %>
